Update privacy link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                     <h2>超慢跑計時器</h2>
                     <p>超慢跑計時器為您提供簡潔與直覺操作，選擇時間與速度後，隨時隨地開始運動。</p>
                     <p><a href="https://www.facebook.com/p/%E8%B6%85%E6%85%A2%E8%B7%91%E8%A8%98%E6%99%82%E5%99%A8-100090574330465/">FB 粉絲專頁</a></p>
-                    <p><a href="https://terricom.notion.site/126c20af4f4f80c58889e426f02026eb">隱私權政策</a></p>
+                    <p><a href="https://terricome.site/privacy">隱私權政策</a></p>
                     <p><a href="https://apps.apple.com/tw/app/%E8%B6%85%E6%85%A2%E8%B7%91%E8%A8%88%E6%99%82%E5%99%A8/id6445976187">iOS 下載</a></p>
                 </div>
             </div>
