--- a/index.html
+++ b/index.html
@@ -5,14 +5,31 @@
     <body>
             <div class="page-content">
                 <div class="container">
-                    <h2>超慢跑計時器</h2>
+                    <h2><img src="images/icon.png" alt="超慢跑計時器" width="80" style="margin-right: 10px;">超慢跑計時器</h2>
                     <p>超慢跑計時器為您提供簡潔與直覺操作，選擇時間與速度後，隨時隨地開始運動。</p>
+                    <p align="center">
+                        <div style="display: inline-block; text-align: center; width: 200px; margin-right: 10px;">
+                            <img src="images/pg_home.png" alt="Home" style="width: 100%;"><br>
+                            <span style="display: block;">基礎模式選擇速度和時間就可以馬上開始</span>
+                        </div>
+                        <div style="display: inline-block; text-align: center; width: 200px; margin-right: 10px;">
+                            <img src="images/pg_frequency.png" alt="Frequency" style="width: 100%;"><br>
+                            <span style="display: block;">變頻模式可以選擇挑戰模式變換速度</span>
+                        </div>
+                        <div style="display: inline-block; text-align: center; width: 200px; margin-right: 10px;">
+                            <img src="images/pg_record.png" alt="Record" style="width: 100%;"><br>
+                            <span style="display: block;">記錄每日的努力過程，汗水不會白流</span>
+                        </div>
+                        <div style="display: inline-block; text-align: center; width: 200px; margin-right: 10px;">
+                            <img src="images/pg_add_pattern.png" alt="AddPattern" style="width: 100%;"><br>
+                            <span style="display: block;">自訂喜歡的時間和速度，跑出自己的節奏來</span>
+                        </div>
+                    </p>
                     <p><a href="https://www.facebook.com/p/%E8%B6%85%E6%85%A2%E8%B7%91%E8%A8%98%E6%99%82%E5%99%A8-100090574330465/">FB 粉絲專頁</a></p>
                     <p><a href="https://terricome.site/privacy">隱私權政策</a></p>
                     <p><a href="https://apps.apple.com/tw/app/%E8%B6%85%E6%85%A2%E8%B7%91%E8%A8%88%E6%99%82%E5%99%A8/id6445976187">iOS 下載</a></p>
                 </div>
             </div>
-            <div id="announcement-modal-content"></div>
         </div>
     </body>
 </html>
